fixed search section going off screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,11 @@ body {
     background-color: hsl(0, 0%, 21%);
     height: 100vh;
 }
+
+h2 {
+    padding-top: .75rem;
+    padding-bottom: .25rem;
+}
   
 /* logo style */
 .logo {
@@ -17,10 +22,19 @@ body {
 }
 
 #main-info-container {
+    padding-top: 0;
     padding-bottom: 0;
     border: 1px solid var(--bulma-primary);
     background: linear-gradient(to bottom, white, grey);
 }
+
+
+
+
+
+
+
+
 
 /* Form style */
 input {
@@ -88,16 +102,16 @@ html, body {
     align-self: flex-start;
 }
 
-.info {
-    height: fit-content;
-}
-
 #data-display {
     display: flex;
     /* align-items: center; */
     justify-content: space-between;
     text-align: center;
 }
+
+/* #data-display.columns {
+    height: fit-content;
+} */
 
 /* flag column */
 .flag-div {
@@ -210,12 +224,13 @@ span #clear-history {
     text-align:center;
 }
 
-.news-img{
+.news-img {
     border-radius: 5px;
     border: 1px solid black; 
-    width: 300px;
+    width: 95%;
     height: 200px;
     margin: 10px;
+    object-fit: cover;
 }
 
 .news-img:hover{
@@ -247,7 +262,9 @@ span #clear-history {
 }
 
 .news-desc {
-    text-align: center;
+    text-align: left;
+    margin: 10px;
+    width: 95%;
 }
 /* Modified from code courtesy of Dalis Chan, Medium.com */
 .sidebar {
@@ -298,7 +315,7 @@ main .sidebar {
     transform: translate(-5px, 0);
     width: 32px;
 }
-  
+
 /* .flag-icons {
     padding-bottom: 3px;
     margin-right: 30px;
@@ -314,7 +331,14 @@ main .sidebar {
     transform: translateX(-50px);
 }
 /* Media queries */
-@media screen and (max-width:870px) {
+@media (max-width:450px){
+    .news-img{
+        height: auto;
+        width: auto;
+    }
+}
+
+@media (max-width:870px) {
     header {
         padding-top: 2rem !important;
     }
@@ -367,7 +391,7 @@ main .sidebar {
     .columns.is-multiline .box.news {
         flex: 1 0 100%;
     }
-
+    
     .search-column {
         padding-top: 0;
         padding-bottom: 0;
@@ -384,6 +408,19 @@ main .sidebar {
 
     .news-author {
         margin-top: 5px;
+    }
+    #data-display {
+        flex-direction: column;
+    }
+    
+    .news-author {
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    .news-container {
+        height: auto;
+        width: auto;
     }
 }
 
@@ -413,17 +450,32 @@ main .sidebar {
         margin-left: auto;
         margin-right: auto;
     }
+    #data-display {
+        flex-direction: column;
+    }
+    
+    .news-author {
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    .news-container {
+        height: auto;
+        width: auto;
+    }
 }
 
 @media (min-width:952px) and (max-width:1320px) {
     main {
         padding-top: 0 !important;
-        
+        padding-left: 20px !important;
+        padding-right: 20px !important;
     }
+    
     .logo {
         margin-top: 1rem;
     }       
-
+    
     .box {
         width: 100%;
         margin-left: auto;
@@ -431,9 +483,9 @@ main .sidebar {
     }
 
     .search-section {
-        width: 50rem;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .search-column {
@@ -441,27 +493,4 @@ main .sidebar {
         width: auto;
     }
    
-}
-
-@media (max-width:951px) {
-    #data-display {
-        flex-direction: column;
-    }
-
-    .news-author {
-        padding: 0px;
-        margin: 0px;
-    }
-
-    .news-container {
-        height: auto;
-        width: auto;
-    }
-}
-
-@media (max-width:450px){
-    .news-img{
-        height: auto;
-        width: auto;
-    }
 }
